<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_detail"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"/>


        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/film_title"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/film_description"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_description2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/film_director"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_director2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/film_release_date"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_release_date2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_detail"
            style= "@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"/>

        <CheckBox
            android:text="@string/preference_favourite"
            android:id="@+id/ch_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            style= "@android:style/TextAppearance.Medium"/>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/preference_comment"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/preference_picture"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                style= "@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tv_picture"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                style= "@android:style/TextAppearance.Medium"/>

        </LinearLayout>

        <ImageView
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/iv_picture"
            android:layout_width="200sp"
            android:layout_height="200sp" />

    </LinearLayout>




</ScrollView>